--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.2.0",
     "isparta": "^3.0.3",
+    "jsdom": "3.1.2",
     "mocha": "^2.1.0",
     "run-sequence": "^1.0.2",
     "sinon": "^1.12.2",
